--- a/Projects/WebDevCert/SurveyForm/css/my-Style.css
+++ b/Projects/WebDevCert/SurveyForm/css/my-Style.css
@@ -1,24 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap');
 
+/*==========================================================================
+Base styles
+==========================================================================*/
+
+:root {
+  --default-color: gray;
+}
+
 html {
   border: 1px solid violet;
 }
 
-head {
+header {
+  background-color: blue;
   border: 1px solid yellow;
 }
 
 body {
+  background-color: var(--default-color, white);
   border: 2px solid blue;
   font-family: 'Shadows Into Light', monospace;
-  align-items: center;
-  justify-content: center;
   text-align: center;
+  padding: 0px;
 }
 
 
 
 form {
+  background-color: blueviolet;
   border: 2px solid green;
   margin: 15px;
   padding: 15px;
@@ -26,6 +36,7 @@ form {
 }
 
 div {
+  background-color: yellowgreen;
   border: 2px solid red;
 }
 
@@ -35,21 +46,51 @@ h1 {
 p {
   font-size: 18px;
 }
+/*==========================================================================
+id styles
+==========================================================================*/
+#header {
+  border: 1px solid red;
+  padding: 5px;
+  margin: auto;
+}
+
+#survey-form {
+  width: 450px;
+  color: aliceblue;
+  /*background-color: #1D385E;*/
+  border-radius: 25px;
+  margin: auto;
+  padding: 50px;
+}
+/*==========================================================================
+Class styles
+==========================================================================*/
+
 
 .red-text {
   color: red;
 }
 
+.img-div {
+  display: grid;
+  width: 450px;
+  margin: auto;
+  padding: 50px;
+}
+
 .img-small {
-  width: 250px;
+  width: 50%;
+  margin: auto;
   border-radius: 50%;
 }
 
 .img-large {
   width: 450px;
+  margin: auto;
   border-radius: 15%;
 }
-
+/*TODO::after address Grid-template grid-area*/
 .img-border {
   border-color: #1D385E;
   border-width: 10px;
@@ -60,23 +101,16 @@ p {
 }
 
 .thanks {
-  width: 450px;
+  width: 50%;
   border: solid 2px black;
   border-radius: 10px;
   padding: 5px;
-  margin: 15px auto;
+  margin: auto;
   text-align: center;
   background-color: white;
 }
 
-#survey-form {
-  width: 600px;
-  color: aliceblue;
-  background-color: #1D385E;
-  border-radius: 25px;
-  margin: auto;
-  padding: 50px;
-}
+
 
 .row-tab {
   width: auto;
@@ -91,10 +125,39 @@ p {
   background-size: cover;
 }
 
-input {
-  background-color: antiquewhite;
-  width: 100%;
+input, option {
+  background-color: white;
   border: 2px solid black;
-  padding: 0;
+  padding: 5px;
   margin: 10px 0px;
+  text-align: left;
+}
+/*==========================================================================
+Attribute styles
+==========================================================================*/
+[type='radio'] {
+  margin: 15px auto 15px auto;
+}
+
+[type='checkbox'] {
+  margin: 1.25em auto 1.25em auto;
+}
+/*==========================================================================
+Media queries
+==========================================================================*/
+
+@media (max-width: 600px) {
+  :root {
+  }
+
+  .img-small {
+    padding-left: -10000px;
+    width: 1px;
+    visibility: hidden;
+  }
+
+  div {
+    background-color: deepskyblue;
+    border: 2px solid red;
+  }
 }
